# vinoteca

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  Cargo.toml  LICENSE  README.md  UserAuth.md  conftest.py  diesel.toml  docker-compose.yaml  environment.yml  manage.py  package-lock.json  pytest.ini  requirements.txt  shippable.yml  static  tsconfig.json  tslint.json  webpack.config.js
.github/workflows/: ci.yml  js.yml  main.yml  rust.yml
dashboards/: models.py  serializers.py  tests.py  views.py
dashboards/migrations/: 0001_initial.py
dashboards/templates/: by_the_numbers.html  colors.html  countries.html  dashboards.html  inventory.html  producers.html  purchases_by_color.html  purchases_by_year.html  recent_purchases.html  regions.html  top_grape_varieties.html  top_producers.html  top_purchase_categories.html  top_purchase_wine_types.html  top_regions.html  top_viti_areas.html  top_wine_types.html
data/: .gitkeep  schema.sql
graph/: serializers.py  urls.py  views.py
graph/templates/: graph.html
migrations/2020-03-13-204839_insert_colors/: down.sql  up.sql
migrations/2020-03-15-183325_init/: down.sql  up.sql
migrations/2020-03-22-215642_create_users/: up.sql
migrations/2020-03-22-220237_add_users_to_wines/: up.sql
migrations/2020-03-23-211503_insert_colors/: up.sql
migrations/2020-03-26-041948_create_colors/: up.sql
migrations/2020-03-26-042619_create_grapes/: down.sql  up.sql
migrations/2020-03-26-042724_create_users/: up.sql
migrations/2020-03-26-042729_create_grapes/: up.sql
migrations/2020-03-26-042824_create_stores/: up.sql
migrations/2020-03-26-042837_create_wine_types/: down.sql  up.sql
migrations/2020-03-26-042840_create_regions/: up.sql
migrations/2020-03-26-042851_create_viti_areas/: down.sql  up.sql
migrations/2020-03-26-042944_create_producers/: down.sql  up.sql
migrations/2020-03-26-043006_create_wines/: down.sql  up.sql
migrations/2020-03-26-043015_create_wine_grapes/: down.sql  up.sql
migrations/2020-03-26-093405_create_purchases/: up.sql
migrations/2020-03-26-111503_insert_colors/: up.sql
migrations/2020-03-29-205710_insert_regions/: down.sql  up.sql
migrations/2020-04-04-170506_user_timestamps/: down.sql  up.sql
migrations/2020-05-01-033443_viti_area_unique_to_user/: down.sql  up.sql
migrations/2020-05-02-031040_recent_purchases_view/: down.sql  up.sql
migrations/2020-05-02-033456_fk_indexes/: down.sql  up.sql
migrations/2020-05-20-081735_trim_strings/: up.sql
migrations/2020-06-15-014702_add_lower_indexes/: down.sql  up.sql
migrations/2020-07-13-044005_add_shopping_list/: down.sql  up.sql
new_purchase/: views.py
new_purchase/templates/: first_time_wine.html  prev_wine.html  prev_wine_search.html  search_results.html
places/: serializers.py  tests.py  views.py
places/templates/: region_cell.html  (+7 more)
producers/: serializers.py  tests.py  urls.py  views.py
rest/: serializers.py  tests.py  urls.py  views.py
scripts/: build.sh  cli.py  delete_orphan_images.py  deploy.sh  env_update.sh  install.sh  lint.sh  migrate.sh  migrate_conf.py  migrate_sql.py  release.sh  reset-migrations.sh  run.sh  test.sh  update.sh  utils.sh
src/: auth.rs  cached_static.rs  catchers.rs  colors.rs  config.rs  dashboards.rs  error.rs  grapes.rs  html.rs  lib.rs  logs.rs  main.rs  media.rs  models.rs  most_common_purchase_date.sql  producers.rs  purchases.rs  query_utils.rs  regions.rs  schema.patch  schema.rs  serde.rs  static_handlers.rs  storage.rs  stores.rs  templates.rs  testing.rs  tests.rs  users.rs  version.rs  viti_areas.rs  wine_grapes.rs  wine_types.rs
templates/: about.html  base.html  index.html  menu_items_base.html  menu_items_sidebar.html  menu_items_top.html  react.html  react_profile.html
tests/: .coveragerc  test_dashboards.py  test_data_fixtures.json  test_new_purchase.py  test_utils.py  test_view.py  test_vinoteca.py
view/: views.py
vinoteca/: __init__.py  config.py  context_processors.py  image.py  models.py  package-lock.json  package.json  settings.py  test_utils.py  tests.py  tsconfig.json  urls.py  utils.py  views.py  webpack.config.js
web/: .eslintignore  .eslintrc.js  .nsprc  globalSetup.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tslint.json  webpack.config.js
wine_attrs/: serializers.py  tests.py  views.py
wines/: create.py  delete.py  models.py  read.py  serializers.py  tests.py  update.py  urls.py
(+595 files in other folders)
