[package]
name = "vinoteca"
description = "Wine purchase tracker"
repository = "https://github.com/threecgreen/vinoteca"
version = "6.3.0"
edition = "2021"
authors = ["Carter Green <cartergr@usc.edu>"]
readme = "./README.md"
license = "MIT"
default-run = "vinoteca"
categories = ["web-programming"]

[dependencies]
# Password encryption
bcrypt = "0.15.0"
# Datetime functionality
chrono = { version = "0.4.31", features = ["serde"] }
# basic ORM
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
# Image handling
image = "0.24.7"
kamadak-exif = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.20"
# AWS S3 access
rust-s3 = { version = "0.33.0", features = ["fail-on-err"] }
# (De)serialization
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4"] }
# Input validation
validator = "0.16.1"
validator_derive = "0.16.0"

[dependencies.rocket]
version = "0.5.0"
default_features = false
features = ["secrets", "json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
default-features = false
features = ["diesel_postgres_pool"]

# Generate typescript type definitions from rust structs
[dependencies.typescript-definitions]
git = "https://github.com/onelson/typescript-definitions"
branch = "no-debug-attrs"
# Enable export in release build
features = ["export-typescript"]

[dev-dependencies]
mockall = "0.11.4"
