[package]
name = "vinoteca"
description = "Wine purchase tracker"
repository = "https://github.com/threecgreen/vinoteca"
version = "6.2.10"
edition = "2021"
authors = ["Carter Green <cartergr@usc.edu>"]
readme = "./README.md"
license = "MIT"
default-run = "vinoteca"
categories = ["web-programming"]

[dependencies]
# Password encryption
bcrypt = "0.13.0"
# Datetime functionality
chrono = { version = "0.4.23", features = ["serde"] }
# basic ORM
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
# Image handling
image = "0.24.5"
kamadak-exif = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.17"
rocket_codegen = "0.4.11"
rocket-multipart-form-data = "0.9.6"
# AWS S3 access
rust-s3 = { version = "0.32.3", features = ["blocking"] }
# (De)serialization
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
time = "0.1.42"
uuid = { version = "1.2.2", features = ["v4"] }
# Input validation
validator = "0.16.0"
validator_derive = "0.16.0"

[dependencies.rocket]
version = "0.4.11"
default_features = false
features = ["private-cookies"]

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json", "diesel_postgres_pool"]

# Generate typescript type definitions from rust structs
[dependencies.typescript-definitions]
version = "0.1.10"
# Enable export in release build
features = ["export-typescript"]

[dev-dependencies]
mockall = "0.11.3"
